# MOTIONIST_V1

./: CMakeLists.txt  MOTIONIST_V1.qmlproject  MOTIONIST_V1.qmlproject.qtds  qmlmodules
content/: App.qml  App.qml.ZxuXJB  App.qml.autosave  BoardScreen.qml  CMakeLists.txt  CMakeLists.txt.autosave.NXMIta  HomeScreen.qml  HomeScreen.qml.ZuNFUf  HomeScreen.qml.autosave.nMeIHf  HomeScreen.qml.nOcjvR  MidiScreen.qml  MotorScreen.qml  TitleBar.qml
content/BoardItem/: BoardGroupAddBtn.qml  BoardSelectMode.qml  BoardSelectModeBtn.qml  BoardSelectType.qml  BoardSettingBase.qml  BoardSettingBaseListBox.qml  BoardSettingDynamic.qml  BoardSettingDynamicListBox.qml  BoardSettingRc.qml  BoardSettingRc.qml.autosave  BoardSettingRcListBox.qml  BoardSettingTitle.qml
content/HomeItem/: HomeButton.qml  HomeButton.qml.EmmIyY
content/MidiItem/: MidiAxisBox.qml  MidiListBox.qml  MidiSlotLED.qml  MidiSlotText.qml
content/MotorItem/: MotorColumnName.qml  MotorListBox.qml  MotorTitle.qml
content/MyColor/: MyColors.qml  qmldir
content/MyFont/: MyFonts.qml
content/images/Board/Base/: opacity.htm
imports/: CMakeLists.txt
imports/MOTIONIST_V1/: CMakeLists.txt  EventListModel.qml  qmldir
imports/MOTIONIST_V1/designer/: plugin.metainfo
src/: app_environment.h  iconloc.rc  import_qml_plugins.h  main.cpp
